--- a/practice/index.html
+++ b/practice/index.html
@@ -7,6 +7,10 @@
 
   <body>
     <!-- put navigation menu just below here -->
+    <p><a href="social.html"> social.htmlへのリンク </a></p>
+   <p><a href="index.html"> index.htmlへのリンク </a></p>
+   <p><a href="pictures.html"> picture.htmlへのリンク </a></p>
+   <p><a href="projects.html"> projects.htmlへのリンク </a></p>
 
     <h1>Homepage</h1>
 
