--- a/practice/pictures.html
+++ b/practice/pictures.html
@@ -8,6 +8,10 @@
   <body>
     <!-- put navigation menu just below here -->
 
+   <p><a href="social.html"> social.htmlへのリンク </a></p>
+   <p><a href="index.html"> index.htmlへのリンク </a></p>
+   <p><a href="pictures.html"> picture.htmlへのリンク </a></p>
+   <p><a href="projects.html"> projects.htmlへのリンク </a></p>
     <h1>Pictures</h1>
 
     <p>My pictures will go here, when I start taking some.</p>
