--- a/project.html
+++ b/project.html
@@ -2,11 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>カイロ(Cairo)の天気</title>
+    <title>カイロはあったカイロ</title>
   </head>
 
   <body>
-<p> カイロ(Cairo)の天気 </p>
+    <meta name="keywords" content="360630">
+<h1> カイロはあったカイロ </h1>
    
   </body>
 </html>
+
+<style>
+html {
+  font-size: 10px;
+}
+
+h1 {
+  font-size: 5em;
+  color: red;
+  text-align: center;
+}
+</style>
