--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
    <h2>プロジェクト課題</h2>
    <p> プロジェクト課題ではカイロの天気を表示する予定です</p>
-   <p>プロジェクト課題で作成したページ:<a href="project.html"> project.html </a></p>
+   <p>プロジェクト課題で作成したページ:<a href="project.html"> カイロの天気 </a></p>
 
    <h2>第1回講義</h2>
 
-   <h3>練習1-4:</h3>
-
+   <h3>練習1-4: リストの作成</h3>
+  
    <a href="practice/text-start.html"> practice/text-start.html </a>
 
-   <h3>練習1-5:</h3>
-
+   <h3>練習1-5: ナビゲーションメニューの作成</h3>
+   
    <a href="practice/index.html"> practice/index.html </a>
 
    <h3>課題1-2: debug-example.html の修正 </h3>
@@ -35,6 +35,23 @@
 
 
    <h2>第2回講義</h2>
+
+   <h3>練習2-3: cssの修正</h3>
+
+   <a href="practice-css/index.html"> practice-css/index.html </a>
+
+   <h3>課題2-1: medialabo/index.htmlのCSSを作成する</h3>
+
+   <a href="index.html"> index.html </a>
+
+   <h3>課題2-2: project.html CSSの作成(プロジェクト課題)</h3>
+
+   <a href="project.html"> project.html  </a>
+
+   <h3>課題2-3: medialabo/index.htmlを編集しよう</h3>
+
+   <a href="index.html"> index.html </a>
+
    <h2>第3回講義</h2>
    <h2>第4回講義</h2>
    <h2>第5回講義</h2>
