--- a/project.html
+++ b/project.html
@@ -17,6 +17,12 @@ html {
   font-size: 10px;
 }
 
+body {
+  background-image:
+  url("");
+  background-size:cover;
+}
+
 h1 {
   font-size: 10em;
   color: red;
