--- a/index.html
+++ b/index.html
@@ -58,3 +58,20 @@
    <h2>第6回講義</h2>
   </body>
 </html>
+
+<style>
+  html {
+    font-size: 10px;
+  }
+
+  h1 {
+    font-size: 1.5em;
+    text-align: center;
+    border: 5px solid black;
+    padding: 40px;
+    margin: 20px;
+    width: 300px;
+    height: 50px;
+    background-color: antiquewhite;
+  }
+</style>
