--- a/index.html
+++ b/index.html
@@ -14,45 +14,45 @@
    <h2>第1回講義</h2>
 
    <h3>練習1-4: リストの作成</h3>
-  
    <a href="practice/text-start.html"> practice/text-start.html </a>
 
    <h3>練習1-5: ナビゲーションメニューの作成</h3>
-   
    <a href="practice/index.html"> practice/index.html </a>
 
    <h3>課題1-2: debug-example.html の修正 </h3>
-
    <a href="practice/debug-example.html"> practice/debug-example.html </a>
 
    <h3> 課題1-3: index.html の作成 </h3>
-
    <a href="index.html"> index.html </a>
 
    <h3>  課題1-5: Web アプリケーションのページテンプレート（プロジェクト課題） </h3>
-
    <a href="project.html"> project.html  </a>
 
 
    <h2>第2回講義</h2>
 
    <h3>練習2-3: cssの修正</h3>
-
    <a href="practice-css/index.html"> practice-css/index.html </a>
 
    <h3>課題2-1: medialabo/index.htmlのCSSを作成する</h3>
-
    <a href="index.html"> index.html </a>
 
    <h3>課題2-2: project.html CSSの作成(プロジェクト課題)</h3>
-
    <a href="project.html"> project.html  </a>
 
    <h3>課題2-3: medialabo/index.htmlを編集しよう</h3>
-
    <a href="index.html"> index.html </a>
 
+
    <h2>第3回講義</h2>
+
+   <h3>練習3-2: 「こんにちは」を確認する</h3>
+   <a href="practice-js/jsintro.html"> practice-js/jsintro.html </a>
+
+   <h3>練習3-5: プログラムを書き足す</h3>
+   <a href="practice-js/jsintro.html"> practice-js/jsintro.html </a>
+
+
    <h2>第4回講義</h2>
    <h2>第5回講義</h2>
    <h2>第6回講義</h2>
