--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>学習の成果</title>
   </head>
   <body>
-   <h1> 「Webコンテンツ作成」の成果 </h1>
+   <h1> 「Webコンテンツ作成」の成果 (成果がファイルとして残っているもののみ表示)</h1>
 
    <h2>プロジェクト課題</h2>
    <p> プロジェクト課題ではカイロの天気を表示する予定です</p>
@@ -51,6 +51,12 @@
 
    <h3>練習3-5: プログラムを書き足す</h3>
    <a href="practice-js/jsintro.html"> practice-js/jsintro.html </a>
+
+   <h3>練習3-6: オブジェクトの参照</h3>
+   <a href="practice-js/obj-practice.html"> practice-js/obj-practice.html </a>
+
+   <h3>練習3-7: デバッガーに慣れる</h3>
+   <a href="practice-js/debug-practice.html"> practice-js/debug-practice.html </a>
 
 
    <h2>第4回講義</h2>
