--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
    <h3>練習3-7: デバッガーに慣れる</h3>
    <a href="practice-js/debug-practice.html"> practice-js/debug-practice.html </a>
 
+   <h3>課題3-1: 数当てゲームの作成（その1）</h3>
+   <a href="kazuate/kazuate.html"> kazuate/kazuate.html </a>
+
 
    <h2>第4回講義</h2>
    <h2>第5回講義</h2>
