--- a/index.html
+++ b/index.html
@@ -46,20 +46,16 @@
 
    <h2>第3回講義</h2>
 
-   <h3>練習3-2: 「こんにちは」を確認する</h3>
-   <a href="practice-js/jsintro.html"> practice-js/jsintro.html </a>
-
    <h3>練習3-5: プログラムを書き足す</h3>
    <a href="practice-js/jsintro.html"> practice-js/jsintro.html </a>
 
    <h3>練習3-6: オブジェクトの参照</h3>
    <a href="practice-js/obj-practice.html"> practice-js/obj-practice.html </a>
 
-   <h3>練習3-7: デバッガーに慣れる</h3>
-   <a href="practice-js/debug-practice.html"> practice-js/debug-practice.html </a>
-
    <h3>課題3-1: 数当てゲームの作成（その1）</h3>
    <a href="kazuate/kazuate.html"> kazuate/kazuate.html </a>
+
+   <h3>課題3-2: オブジェクトからデータを取り出す（プロジェクト課題）</h3>
 
 
    <h2>第4回講義</h2>
