--- a/index.html
+++ b/index.html
@@ -46,20 +46,27 @@
 
    <h2>第3回講義</h2>
 
-   <h3>練習3-2: 「こんにちは」を確認する</h3>
-   <a href="practice-js/jsintro.html"> practice-js/jsintro.html </a>
-
    <h3>練習3-5: プログラムを書き足す</h3>
+   <p>コンソールに「こんにちは」を出力しました。</p>
    <a href="practice-js/jsintro.html"> practice-js/jsintro.html </a>
 
    <h3>練習3-6: オブジェクトの参照</h3>
+   <p>コンソールにキャンパスの住所、Ｄ館の教室名、日本語の学科名を出力しました。
+     javaで習った構文とは異なる構文を使用しましたが共通点はあるように思えたので覚えやすいと思います。
+   </p>
    <a href="practice-js/obj-practice.html"> practice-js/obj-practice.html </a>
 
-   <h3>練習3-7: デバッガーに慣れる</h3>
-   <a href="practice-js/debug-practice.html"> practice-js/debug-practice.html </a>
-
    <h3>課題3-1: 数当てゲームの作成（その1）</h3>
+   <p>数あてゲームを作成しました。ほとんどjavaで習った構文を使用しましたが無事出力できてよかったです。</p>
    <a href="kazuate/kazuate.html"> kazuate/kazuate.html </a>
+
+   <h3>課題3-2: オブジェクトからデータを取り出す（プロジェクト課題）</h3>
+   <p>jsファイルからデータを取り出す課題です。なかなかコンソールに出力されず苦戦しました。</p>
+
+   <h3>課題3-3: index.html を編集しよう</h3>
+   <p>今回の授業ではjavascriptを初めて使用しました。まだコンソールに出力しかやっていないので
+     今後どのように Webページに反映されるのかはわかりませんが、javascriptを理解し、このページを見やすいようにしたいと思います。
+   </p>
 
 
    <h2>第4回講義</h2>
