--- a/practice-dom/dom-demo.html
+++ b/practice-dom/dom-demo.html
@@ -6,6 +6,9 @@
   </head>
 
   <body>
+
+    <script src="dom-demo.js" defer></script>
+
       <h1>大陸について</h1>
       <h2>大陸とは</h2>
       <p id="definition"><em>大陸</em>とは，地球の近く上に存在する陸塊である．一般的には次に示す6つの陸上部分を指すが，これは相対的な判断によるもので厳格な基準は設けられていない．</p>
