--- a/kazuate/kazuate.html
+++ b/kazuate/kazuate.html
@@ -12,5 +12,6 @@
     <p>第5回課題でテキストボックスとボタンを設置します．</p>
     <p id="answer">予想: 4</p>
     <p id="result">第4回課題で結果を表示します</p>
+    <div id="placeholder"></div>
   </body>
 </html>
