--- a/kazuate/kazuate.html
+++ b/kazuate/kazuate.html
@@ -10,7 +10,7 @@
   <body>
     <h1>数当てゲーム</h1>
     <p>第5回課題でテキストボックスとボタンを設置します．</p>
-    <p id="answer">予想: 4</p>
+    <p id="answer"></p>
     <p id="result"></p>
     <div id="placeholder"></div>
   </body>
