--- a/project.html
+++ b/project.html
@@ -8,7 +8,9 @@
   </head>
 
   <body>
-<h1> カイロはあったカイロ </h1>
+   <h1> カイロはあったカイロ </h1>
+   <p>カイロの温度</p>
+   <div id="placeholder"></div>
    
   </body>
 </html>
