--- a/index.html
+++ b/index.html
@@ -70,6 +70,36 @@
 
 
    <h2>第4回講義</h2>
+
+   <h3>練習4-6: プログラムを組み込む</h3>
+   <p>javascriptからでも文字をWebページ上に表示できるようになった。</p>
+
+   <h3>練習4-7: 7大洋のリストを追加する</h3>
+   <p>なぜか「・」のみ表示されて苦戦した。ケアレスミスが原因なので入力後確認をする。</p>
+
+   <h3>練習4-9: すべての h2 要素の背景色を変更する</h3>
+   <p>プログラムが簡単だったため難なくできた。汎用性が高そうなのでプロジェクト課題の装飾に使いたい。</p>
+   <a href="practice-dom/dom-demo.html"> practice-dom/dom-demo.html </a>
+
+   <h3>練習4-11: プレースホルダーとしての div 要素と span 要素</h3>
+   <p>div要素とspan要素の違いを定期的に忘れてしまうため何度か繰り返し使用する。</p>
+   <p>div要素は大きな塊、span要素は文字などの小さな塊に使う。</p>
+   <a href="practice-dom/div-span-demo1.html"> practice-dom/div-span-demo1.html </a>
+
+   <h3>練習4-12: 写真表</h3>
+   <p>保存をし忘れたのか、初期状態だった。復習するいいきっかけになったと思う。</p>
+   <a href="practice-dom/div-demo2.html"> practice-dom/div-demo2.html </a>
+
+   <h3>課題4-1: 数当てゲームのページを改良する</h3>
+   <p>授業で学んだことの応用。Webページ上に表示できるようになったので完成に近づいていると思う。</p>
+   <a href="kazuate.html"> kazuate.html </a>
+
+   <h3>課題4-2: オブジェクトをページ上に表示する（プロジェクト課題）</h3>
+   <p>前回の内容の部分でミスがあり、表示させるのに時間がかかった。プログラムを間違えていても動かしてくれるVSCodeの素晴らしさを知った。</p>
+
+   <h3>課題4-3: index.html を編集しよう</h3>
+   <p>javascriptを使用してWebページに動きをつけたいと思い授業を終えたあと一気にやろうと思ったがある程度の枠組みを作っておきたいと思った。</p>
+
    <h2>第5回講義</h2>
    <h2>第6回講義</h2>
   </body>
