--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
    <h3>課題4-1: 数当てゲームのページを改良する</h3>
    <p>授業で学んだことの応用。Webページ上に表示できるようになったので完成に近づいていると思う。</p>
-   <a href="kazuate.html"> kazuate.html </a>
+   <a href="kazuate/kazuate.html"> kazuate/kazuate.html </a>
 
    <h3>課題4-2: オブジェクトをページ上に表示する（プロジェクト課題）</h3>
    <p>前回の内容の部分でミスがあり、表示させるのに時間がかかった。プログラムを間違えていても動かしてくれるVSCodeの素晴らしさを知った。</p>
