--- a/kazuate/kazuate.html
+++ b/kazuate/kazuate.html
@@ -10,7 +10,7 @@
   <body>
     <h1>数当てゲーム</h1>
     <label for="math">1から10の間の整数: </label>
-  	<input type="range" name="math" size="10">
+  	<input type="text" name="math" size="10">
 	  <button id="print">回答</button>
     <p id="answer"></p>
     <p id="result"></p>
