--- a/project.html
+++ b/project.html
@@ -11,6 +11,9 @@
    <h1> カイロはあったカイロ </h1>
    <p>カイロの温度</p>
    <div id="placeholder"></div>
+   <label for="search">検索: </label>
+	<input type="text" name="search" size="10">
+	<button id="print">🔍</button>
    
   </body>
 </html>
