--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>学習の成果</title>
   </head>
   <body>
-   <h1> 「Webコンテンツ作成」の成果 (成果がファイルとして残っているもののみ表示)</h1>
+   <h1> 「Webコンテンツ作成」の成果 </h1>
 
    <h2>プロジェクト課題</h2>
    <p> プロジェクト課題ではカイロの天気を表示する予定です</p>
@@ -101,6 +101,25 @@
    <p>javascriptを使用してWebページに動きをつけたいと思い授業を終えたあと一気にやろうと思ったがある程度の枠組みを作っておきたいと思った。</p>
 
    <h2>第5回講義</h2>
+
+   <h3>練習5-2: イベントハンドラの登録を確認する</h3>
+   <p>インスペクターにeventマークがあり、プログラムが正常に動作しているか確認しやすいのはありがたいと思った。</p>
+   <a href = "practice-event/event-intro.html"> practice-event/event-intro.html </a>
+
+   <h3>練習5-3: イベントを選択する</h3>
+   <p>keypressが何故かキーを押し続けている間動作し続けていた。</p>
+   <a href = "practice-event/event-list.html"> practice-event/event-list.html </a>
+
+   <h3>課題5-1: 数当てゲームの完成</h3>
+   <p>完成したが、一回目を勝手に予想してしまう。時間があれば直したい。</p>
+   <a href = "kazuate/kazuate.html"> kazuate/kazuate.html </a>
+
+   <h3>課題5-2: 検索欄を設置する（プロジェクト課題）</h3>
+   <p>検索欄の設置に伴い、それぞれの要素の配置を変えたいと思った。</p>
+
+   <h3>課題5-3: index.html を編集しよう</h3>
+   <p>プロジェクト課題より要素が多くなりそうなのでこれにも検索欄を設置したいと思う。</p>
+
    <h2>第6回講義</h2>
   </body>
 </html>
