--- a/project.html
+++ b/project.html
@@ -11,8 +11,8 @@
    <h1> カイロはあったカイロ </h1>
    <p>カイロの温度</p>
    <div id="placeholder"></div>
-   <label for="search">検索: </label>
-	<input type="text" name="search" size="10">
+   <label for="se">検索: </label>
+	<input type="search" name="se" size="10">
 	<button id="print">🔍</button>
    
   </body>
