--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
    <h3>練習3-6: オブジェクトの参照</h3>
    <p>コンソールにキャンパスの住所、Ｄ館の教室名、日本語の学科名を出力しました。
-     javaで習った構文とは異なる構文を使用しましたが共通点はあるように思えたので覚えやすいと思います。
+     javaで習った構文とは異なる構文を使用しましたが共通点はあるように思えたのですぐ覚えられると思った。
    </p>
    <a href="practice-js/obj-practice.html"> practice-js/obj-practice.html </a>
 
