--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@ html {
 
 body {
   background-image:
-  url("");
+  url("https://publicdomainq.net/images/201807/06s/publicdomainq-0023888amr.jpg");
   background-size:cover;
 }
 
