--- a/project.html
+++ b/project.html
@@ -8,7 +8,9 @@
   </head>
 
   <body>
-   <h1> カイロはあったカイロ </h1>
+    <header>
+      <h1> カイロはあったカイロ </h1>
+    </header>
    <p>カイロの温度</p>
    <div id="placeholder"></div>
    <label for="se">検索: </label>
@@ -30,8 +32,10 @@ body {
 }
 
 h1 {
-  font-size: 10em;
+  font-size: 5em;
   color: red;
-  text-align: center;
+  text-align: left;
+  
+
 }
 </style>
