--- a/index.html
+++ b/index.html
@@ -128,9 +128,13 @@
   html {
     font-size: 10px;
   }
+  
+  body {
+    background-color: antiquewhite;
+  }
 
   h1 {
-    font-size: 1.5em;
+    font-size: 2em;
     text-align: center;
     border: 5px solid black;
     padding: 40px;
@@ -138,5 +142,6 @@
     width: 300px;
     height: 50px;
     background-color: antiquewhite;
+    
   }
 </style>
