--- a/project.html
+++ b/project.html
@@ -32,10 +32,16 @@ body {
 }
 
 h1 {
-  font-size: 5em;
-  color: red;
+  font-size: 3em;
+  color: rgb(96, 0, 0);
   text-align: left;
   
 
+}
+
+header, footer {
+  background-color: rgb(255, 166, 0);
+  height: 5em;
+  padding: 2em;
 }
 </style>
