--- a/project.html
+++ b/project.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>カイロはあったカイロ</title>
+
+      <!-- 第四、五回課題
+    <script src="weather.js" defer></script>
+    -->
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
-    <script src="weather.js" defer></script>
+    <script src ="project.js"></script>
+
   </head>
 
   <body>
     <header>
       <h1> カイロはあったカイロ </h1>
     </header>
-   <p>カイロの温度</p>
+
+    <!-- 第四、五回課題
    <div id="placeholder"></div>
-   <!-- 検索欄 -->
    <label for="se">検索: </label>
 	<input type="search" name="se" size="10">
 	<button id="print">🔍</button>
+    -->
 
   <!-- 検索欄 -->
   <button id="sendRequest">🔍</button>
