--- a/project.html
+++ b/project.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ajax通信のデモ</title>
+    <meta charset="utf-8">
+    <title>カイロはあったカイロ</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
 	<script src="project.js" defer></script>
   </head>
