--- a/project.html
+++ b/project.html
@@ -8,8 +8,18 @@
   </head>
 
   <body>
-    <h1>Ajax通信のデモ</h1>
-	<p>以下のボタンを押すと，サーバに通信します．結果はコンソールに出力します．</p>
+    <header>
+        <h1> カイロはあったカイロ </h1>
+    </header>
+  
+      <!-- 第四、五回課題
+     <div id="placeholder"></div>
+     <label for="se">検索: </label>
+      <input type="search" name="se" size="10">
+      <button id="print">🔍</button>
+      -->
+  
+    <!-- 検索欄 -->
 	<button id="sendRequest">通信</button>
   </body>
 </html>
