--- a/project.html
+++ b/project.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>カイロはあったカイロ</title>
+
+     <!-- 第四、五回課題
+    <script src="weather.js" defer></script>
+    -->
+    
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
 	<script src="project.js" defer></script>
   </head>
