--- a/project.html
+++ b/project.html
@@ -27,6 +27,7 @@
     <!-- 検索欄 -->
     <input type="text" name="kensaku" id="kensaku" size="10">
 	<button id="sendRequest">検索</button>
+    <p>おっす</p>
   </body>
 </html>
 
