--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <title>学習の成果</title>
   </head>
+
   <body>
    <h1> 「Webコンテンツ作成」の成果 </h1>
+
+   <h2>本テーマの学習目的</h2>
+   <p>HTML、CSS、javascriptの基礎を学び、実際にWebサイトを制作する。また、制作するWebサイトには本授業で学んだ内容を反映させて制作する。</p>
 
    <h2>プロジェクト課題</h2>
    <p> プロジェクト課題ではカイロの天気を表示する予定です</p>
@@ -120,7 +124,8 @@
    <h3>課題5-3: index.html を編集しよう</h3>
    <p>プロジェクト課題より要素が多くなりそうなのでこれにも検索欄を設置したいと思う。</p>
 
-   <h2>第6回講義</h2>
+   <h2>感想</h2>
+   <p></p>
   </body>
 </html>
 
