--- a/project.html
+++ b/project.html
@@ -28,6 +28,8 @@
     <input type="text" name="kensaku" id="kensaku" size="10">
 	<button id="search">検索</button>
     <p>おっす</p>
+
+    <p id = sendRequest>a</p>
   </body>
 </html>
 
