--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
    <h1> 「Webコンテンツ作成」の成果 </h1>
 
    <h2>本テーマの学習目的</h2>
-   <p>HTML、CSS、javascriptの基礎を学び、実際にWebサイトを制作する。また、制作するWebサイトには本授業で学んだ内容を反映させて制作する。</p>
+   <p>HTML、CSS、javascriptの基礎を学び、実際にWebサイトを制作する。
+     また、制作するWebサイトには本授業で学んだ内容を反映させて制作する。
+    </p>
 
    <h2>プロジェクト課題</h2>
-   <p> プロジェクト課題ではカイロの天気を表示する予定です</p>
+   <p> プロジェクト課題では、カイロの天気や最高気温などの情報を記載しました。各項目にチェックボックスが配置されており、必要な項目にチェックを入れ、検索ボタンをクリックすると情報が表示されます。複数のチェックボックスにチェックを入れ、検索ボタンを押すとそれぞれの情報が一括で表示されます。背景色などのcssについて、カイロはエジプトの都市であり、ピラミッドや砂漠が有名であるため、それらに類似した色を使い、タイトルの色は太陽をイメージして制作しました。タイトルの色は最初、明るめの赤でしたが、見辛いと感じたので暗めに変更しました。</p>
    <p>プロジェクト課題で作成したページ:<a href="project.html"> カイロの天気 </a></p>
 
    <h2>第1回講義</h2>
@@ -125,7 +127,30 @@
    <p>プロジェクト課題より要素が多くなりそうなのでこれにも検索欄を設置したいと思う。</p>
 
    <h2>感想</h2>
-   <p></p>
+   <p>今回の情報メディア実験を通して、学んだ知識をアウトプットするのが苦手であると感じました。
+     特に、javascriptの最終課題であるプロジェクト課題に時間が掛かりました。
+     本課題では、ajax通信を用いて取得した情報をwebサイト内に出力する必要がありましたが、やり方がわかりませんでした。
+     アウトプット以前に、知識不足の面もありますが、第3回で学んだ内容が使えるということを考えられず、
+     ajax通信にはajax通信特有の出力方法があると考えてしまい、解決に時間を掛けていましました。
+     インターネットで調べたり、書籍を探したり、他サイトのコンソールひ開いてどのように通信し、
+     サイト内に出力しているのかを調べたりしましたが、
+     欲しい情報がなかったり、XMLを使った内容であったりと、参考にできませんでした。
+     しかし、一度長い間頭を捻らせた内容であるため、今後使用する際に戸惑うことはなくなると思います。
+     本授業ではあまりうまく活用できませんでしたが、
+     これからjavascriptを扱う上でプログラムの入力速度に大きく貢献できる可能性がある為、
+     自分でどのように出力するか方法を考えていた時間は無駄ではなかったと思います。
+     課題提出までの時間が足りず、最終的に先生に質問する形にはなりましたが、記憶の定着に繋がったと思います。
+     CSSでは、想定よりも配置と配色が難しく、制作段階で満足できるようなデザインは制作できませんでした。
+     他サイトを参考にしようと考えましたが、他サイトとプロジェクト課題では、要素のジャンルと数が大きく違い、
+     他サイトで良いと思った部分をプロジェクト課題に反映させることはほとんど出来なかったと思います。
+     webサイトの作製が初めてである為、
+     webサイトに不慣れな印象が出てしまうのは、現時点では解消することのできない問題であると思い、
+     経験というものは財産であると感じました。
+     HTMLでは、javascript程の拡張性とCSSのようなデザイン性を必要としなかったので、
+     そこまで苦戦することなく進めることができたと思います。現時点ではdiv要素とspan要素の違いがわからないなど、
+     疑問に思う部分は少しありますが、授業でならった大まかな部分は問題なくアウトプットできると思います。
+     javascriptもこのくらい単純であるといいなと思いました。
+    </p>
   </body>
 </html>
 
