--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@
       -->
   
     <!-- 検索欄 -->
-    <p id = "sendRequest">カイロのどの情報を知りたいですか？</p>
+    <p>カイロのどの情報を知りたいですか？</p>
     <p>
       <input type="checkbox" name="kensaku" id="lon" value="coord.lon">
       <label for="lon">緯度</label>
@@ -46,7 +46,7 @@
       <input type="checkbox" name="kensaku" id="name" value="name">
       <label for="name">都市名</label>
     <p> 
-    <p><button  id = "search">検索</button></p>
+    <p><button  id = "sendRequest">検索</button></p>
     <div id = "placeholder"></div>
 
   </body>
