--- a/project.html
+++ b/project.html
@@ -27,21 +27,21 @@
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
     <p>
-      <input type="checkbox" name="kensaku" id="lon" value="coord.lon">
+      <input type="checkbox" name="kensaku" id="lon" value="lon">
       <label for="lon">緯度</label>
-      <input type="checkbox" name="kensaku" id="lat" value="coord.lat">
+      <input type="checkbox" name="kensaku" id="lat" value="lat">
       <label for="lat">経度</label>
-      <input type="checkbox" name="kensaku" id="weather" value="weather.description">
+      <input type="checkbox" name="kensaku" id="weather" value="description">
       <label for="weather">天気</label>
-      <input type="checkbox" name="kensaku" id="temp_min" value="main.temp_min">
+      <input type="checkbox" name="kensaku" id="temp_min" value="temp_min">
       <label for="temp_min">最低気温</label>
-      <input type="checkbox" name="kensaku" id="temp_max" value="main.temp_max">
+      <input type="checkbox" name="kensaku" id="temp_max" value="temp_max">
       <label for="temp_max">最高気温</label>
-      <input type="checkbox" name="kensaku" id="humidity" value="main.humidity">
+      <input type="checkbox" name="kensaku" id="humidity" value="humidity">
       <label for="humidity">湿度</label>
-      <input type="checkbox" name="kensaku" id="speed" value="wind.speed">
+      <input type="checkbox" name="kensaku" id="speed" value="speed">
       <label for="speed">風速</label>
-      <input type="checkbox" name="kensaku" id="deg" value="wind.deg">
+      <input type="checkbox" name="kensaku" id="deg" value="deg">
       <label for="deg">風向</label>
       <input type="checkbox" name="kensaku" id="name" value="name">
       <label for="name">都市名</label>
