--- a/project.html
+++ b/project.html
@@ -26,26 +26,26 @@
   
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
-    <p>
-      <input type="checkbox" name="kensaku" id="lon" value="lon" onchange="lon();">
+    <form name = "form1">
+      <input type="checkbox" name="kensaku" id="lon" value="data.coord.lon">
       <label for="lon">緯度</label>
-      <input type="checkbox" name="kensaku" id="lat" value="lat" onchange="lat();">
+      <input type="checkbox" name="kensaku" id="lat" value="lat">
       <label for="lat">経度</label>
-      <input type="checkbox" name="kensaku" id="weather" value="description" onchange="description();">
+      <input type="checkbox" name="kensaku" id="weather" value="description">
       <label for="weather">天気</label>
-      <input type="checkbox" name="kensaku" id="temp_min" value="temp_min" onchange="temp_min();">
+      <input type="checkbox" name="kensaku" id="temp_min" value="temp_min">
       <label for="temp_min">最低気温</label>
-      <input type="checkbox" name="kensaku" id="temp_max" value="temp_max" onchange="temp_max();">
+      <input type="checkbox" name="kensaku" id="temp_max" value="temp_max">
       <label for="temp_max">最高気温</label>
-      <input type="checkbox" name="kensaku" id="humidity" value="humidity" onchange="humidity();">
+      <input type="checkbox" name="kensaku" id="humidity" value="humidity">
       <label for="humidity">湿度</label>
-      <input type="checkbox" name="kensaku" id="speed" value="speed" onchange="speed();">
+      <input type="checkbox" name="kensaku" id="speed" value="speed">
       <label for="speed">風速</label>
-      <input type="checkbox" name="kensaku" id="deg" value="deg" onchange="deg();">
+      <input type="checkbox" name="kensaku" id="deg" value="deg">
       <label for="deg">風向</label>
-      <input type="checkbox" name="kensaku" id="name" value="name" onchange="name();">
+      <input type="checkbox" name="kensaku" id="name" value="name">
       <label for="name">都市名</label>
-    <p> 
+    <form> 
     <p><button  id = "sendRequest">検索</button></p>
     <div id = "placeholder"></div>
 
