--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
   
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
-    <form name = "form1">
+    <form>
       <input type="checkbox" name="kensaku" id="lon" value="lon">
       <label for="lon">緯度</label>
       <input type="checkbox" name="kensaku" id="lat" value="lat">
