--- a/project.html
+++ b/project.html
@@ -47,15 +47,7 @@
       <label for="name">都市名</label>
     <p> 
     <p><button  id = "sendRequest">検索</button></p>
-    <div id = "placeholder1"></div>
-    <div id = "placeholder2"></div>
-    <div id = "placeholder3"></div>
-    <div id = "placeholder4"></div>
-    <div id = "placeholder5"></div>
-    <div id = "placeholder6"></div>
-    <div id = "placeholder7"></div>
-    <div id = "placeholder8"></div>
-    <div id = "placeholder9"></div>
+    <div id = "placeholder"></div>
 
   </body>
 </html>
