--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     -->
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
-	<script src="project.js" defer></script>
+	<script src="test.js" defer></script>
   </head>
 
   <body>
