--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
   
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
-
+    <div id="main">
     <div class="cell" id="cell1">緯度</div>
     <div class="cell" id="cell2">経度</div>
     <div class="cell" id="cell3">天気</div>
