--- a/project.html
+++ b/project.html
@@ -27,9 +27,9 @@
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
     <p>
-      <input type="checkbox" name="kensaku" id="lon" value="lon">
+      <input type="checkbox" name="kensaku" id="lon" value="data.coord.lon">
       <label for="lon">緯度</label>
-      <input type="checkbox" name="kensaku" id="lat" value="lat">
+      <input type="checkbox" name="kensaku" id="lat" value="data.coord.lat">
       <label for="lat">経度</label>
       <input type="checkbox" name="kensaku" id="weather" value="description">
       <label for="weather">天気</label>
