--- a/project.html
+++ b/project.html
@@ -27,27 +27,35 @@
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
     <p>
-      <input type="checkbox" name="kensaku" id="lon" value="data.coord.lon">
+      <input type="checkbox" name="kensaku1" id="lon" value="lon">
       <label for="lon">緯度</label>
-      <input type="checkbox" name="kensaku" id="lat" value="data.coord.lat">
+      <input type="checkbox" name="kensaku2" id="lat" value="lat">
       <label for="lat">経度</label>
-      <input type="checkbox" name="kensaku" id="weather" value="description">
+      <input type="checkbox" name="kensaku3" id="weather" value="description">
       <label for="weather">天気</label>
-      <input type="checkbox" name="kensaku" id="temp_min" value="temp_min">
+      <input type="checkbox" name="kensaku4" id="temp_min" value="temp_min">
       <label for="temp_min">最低気温</label>
-      <input type="checkbox" name="kensaku" id="temp_max" value="temp_max">
+      <input type="checkbox" name="kensaku5" id="temp_max" value="temp_max">
       <label for="temp_max">最高気温</label>
-      <input type="checkbox" name="kensaku" id="humidity" value="humidity">
+      <input type="checkbox" name="kensaku6" id="humidity" value="humidity">
       <label for="humidity">湿度</label>
-      <input type="checkbox" name="kensaku" id="speed" value="speed">
+      <input type="checkbox" name="kensaku7" id="speed" value="speed">
       <label for="speed">風速</label>
-      <input type="checkbox" name="kensaku" id="deg" value="deg">
+      <input type="checkbox" name="kensaku8" id="deg" value="deg">
       <label for="deg">風向</label>
-      <input type="checkbox" name="kensaku" id="name" value="name">
+      <input type="checkbox" name="kensaku9" id="name" value="name">
       <label for="name">都市名</label>
     <p> 
     <p><button  id = "sendRequest">検索</button></p>
-    <div id = "placeholder"></div>
+    <div id = "placeholder1"></div>
+    <div id = "placeholder2"></div>
+    <div id = "placeholder3"></div>
+    <div id = "placeholder4"></div>
+    <div id = "placeholder5"></div>
+    <div id = "placeholder6"></div>
+    <div id = "placeholder7"></div>
+    <div id = "placeholder8"></div>
+    <div id = "placeholder9"></div>
 
   </body>
 </html>
