--- a/project.html
+++ b/project.html
@@ -26,28 +26,16 @@
   
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
-    <p>
-      <input type="checkbox" name="kensaku" id="lon" value="lon">
-      <label for="lon">緯度</label>
-      <input type="checkbox" name="kensaku" id="lat" value="lat">
-      <label for="lat">経度</label>
-      <input type="checkbox" name="kensaku" id="weather" value="description">
-      <label for="weather">天気</label>
-      <input type="checkbox" name="kensaku" id="temp_min" value="temp_min">
-      <label for="temp_min">最低気温</label>
-      <input type="checkbox" name="kensaku" id="temp_max" value="temp_max">
-      <label for="temp_max">最高気温</label>
-      <input type="checkbox" name="kensaku" id="humidity" value="humidity">
-      <label for="humidity">湿度</label>
-      <input type="checkbox" name="kensaku" id="speed" value="speed">
-      <label for="speed">風速</label>
-      <input type="checkbox" name="kensaku" id="deg" value="deg">
-      <label for="deg">風向</label>
-      <input type="checkbox" name="kensaku" id="name" value="name">
-      <label for="name">都市名</label>
-    <p> 
-    <p><button  id = "sendRequest">検索</button></p>
-    <div id = "placeholder"></div>
+    <button id = "lon">緯度</button>
+    <button id = "lat">経度</button>
+    <button id = "weather">天気</button>
+    <button id = "temp_min">最低気温</button>
+    <button id = "temp_max">最高気温</button>
+    <button id = "humidity">湿度</button>
+    <button id = "speed">風速</button>
+    <button id = "deg">風向</button>
+    <button id = "name">都市名</button>
+
 
   </body>
 </html>
