--- a/project.html
+++ b/project.html
@@ -31,11 +31,11 @@
       <label for="lon">緯度</label>
       <input type="checkbox" name="kensaku" id="lat" value="lat">
       <label for="lat">経度</label>
-      <input type="checkbox" name="kensaku" id="weather" value="data.weather[0].description">
+      <input type="checkbox" name="kensaku" id="weather" value="description">
       <label for="weather">天気</label>
-      <input type="checkbox" name="kensaku" id="temp_min" value="main.temp_min">
+      <input type="checkbox" name="kensaku" id="temp_min" value="temp_min">
       <label for="temp_min">最低気温</label>
-      <input type="checkbox" name="kensaku" id="temp_max" value="data.main.temp_max">
+      <input type="checkbox" name="kensaku" id="temp_max" value="temp_max">
       <label for="temp_max">最高気温</label>
       <input type="checkbox" name="kensaku" id="humidity" value="humidity">
       <label for="humidity">湿度</label>
