--- a/project.html
+++ b/project.html
@@ -27,15 +27,15 @@
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
     <div id = main>
-      <div class="sendRequest" id="cell1">緯度</div>
-      <div class="sendRequest" id="cell2">経度</div>
-      <div class="sendRequest" id="cell3">天気</div>
-      <div class="sendRequest" id="cell4">最低気温</div>
-      <div class="sendRequest" id="cell5">最高気温</div>
-      <div class="sendRequest" id="cell6">湿度</div>
-      <div class="sendRequest" id="cell7">風速</div>
-      <div class="sendRequest" id="cell8">風向</div>
-      <div class="sendRequest" id="cell9">都市名</div>
+      <button class="sendRequest" id="cell1">緯度</button>
+      <button class="sendRequest" id="cell2">経度</button>
+      <button class="sendRequest" id="cell3">天気</button>
+      <button class="sendRequest" id="cell4">最低気温</button>
+      <button class="sendRequest" id="cell5">最高気温</button>
+      <button class="sendRequest" id="cell6">湿度</button>
+      <button class="sendRequest" id="cell7">風速</button>
+      <button class="sendRequest" id="cell8">風向</button>
+      <button class="sendRequest" id="cell9">都市名</button>
     </div>
   </body>
 </html>
