--- a/project.html
+++ b/project.html
@@ -27,7 +27,7 @@
     <!-- 検索欄 -->
     <p>カイロのどの情報を知りたいですか？</p>
     <p>
-      <input type="checkbox" name="kensaku" id="lon" value="lon">
+      <input type="checkbox" name="kensaku" id="lon" value="data.coord.lon">
       <label for="lon">緯度</label>
       <input type="checkbox" name="kensaku" id="lat" value="lat">
       <label for="lat">経度</label>
