--- a/test.html
+++ b/test.html
@@ -25,26 +25,43 @@
       -->
   
     <!-- 検索欄 -->
-    <p>カイロのどの情報を知りたいですか？</p>
+    <p>どの地域の情報を知りたいですか？</p>
     <p>
-      <input type="checkbox" name="kensaku" id="lon" value="lon">
-      <label for="lon">緯度</label>
-      <input type="checkbox" name="kensaku" id="lat" value="lat">
-      <label for="lat">経度</label>
-      <input type="checkbox" name="kensaku" id="weather" value="description">
-      <label for="weather">天気</label>
-      <input type="checkbox" name="kensaku" id="temp_min" value="temp_min">
-      <label for="temp_min">最低気温</label>
-      <input type="checkbox" name="kensaku" id="temp_max" value="temp_max">
-      <label for="temp_max">最高気温</label>
-      <input type="checkbox" name="kensaku" id="humidity" value="humidity">
-      <label for="humidity">湿度</label>
-      <input type="checkbox" name="kensaku" id="speed" value="speed">
-      <label for="speed">風速</label>
-      <input type="checkbox" name="kensaku" id="deg" value="deg">
-      <label for="deg">風向</label>
-      <input type="checkbox" name="kensaku" id="name" value="name">
-      <label for="name">都市名</label>
+      <input type="radio" name="kensaku" id="cairo" value="360630">
+      <label for="cairo">カイロ(エジプト)</label>
+
+      <input type="radio" name="kensaku" id="moscow" value="524901">
+      <label for="moscow">モスクワ(ロシア)</label>
+
+      <input type="radio" name="kensaku" id="johannesburg" value="993800">
+      <label for="johannesburg">ヨハネスブルク(南アフリカ)</label>
+
+      <input type="radio" name="kensaku" id="beijing" value="1816670">
+      <label for="beijing">北京(中国)</label>
+
+      <input type="radio" name="kensaku" id="tokyo" value="1850147">
+      <label for="tokyo">東京(日本)</label>
+
+      <input type="radio" name="kensaku" id="singapore" value="1880252">
+      <label for="singapore">シンガポール</label>
+
+      <input type="radio" name="kensaku" id="sydney" value="2147714">
+      <label for="sydney">シドニー(オーストラリア)</label>
+
+      <input type="radio" name="kensaku" id="london" value="2643743">
+      <label for="london">ロンドン(イギリス)</label>
+
+      <input type="radio" name="kensaku" id="paris" value="2968815">
+      <label for="paris">パリ(フランス)</label>
+
+      <input type="radio" name="kensaku" id="riodejaneiro" value="3451189">
+      <label for="riodejaneiro">リオデジャネイロ(ブラジル)</label>
+
+      <input type="radio" name="kensaku" id="newyork" value="5128581">
+      <label for="newyork">ニューヨーク(アメリカ)</label>
+
+      <input type="radio" name="kensaku" id="losangeles" value="5368361">
+      <label for="losangeles">ロサンゼルス(アメリカ)</label>
     <p> 
     <p><button  id = "sendRequest">検索</button></p>
     <div id = "placeholder"></div>
@@ -58,7 +75,7 @@
     }
     
     body {
-      background-color: antiquewhite;
+      background-color: white;
     }
     
     h1 {
