--- a/test.html
+++ b/test.html
@@ -35,10 +35,10 @@
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="360630">
                   <label for="cairo">カイロ</label></th>
-                <th id = "11">a </th> <th id = "12">a </th>
-                <th id = "13">a </th> <th id = "14">a </th> <th id = "15">a </th>
-                <th id = "16">a </th> <th id = "17">a </th> <th id = "18">a </th>
-                <th id = "19">a </th> <th id = "1a"> a</th> <th id = "1b">a </th>
+                <th id = "11"> </th> <th id = "12"> </th>
+                <th id = "13"> </th> <th id = "14"> </th> <th id = "15"> </th>
+                <th id = "16"> </th> <th id = "17"> </th> <th id = "18"> </th>
+                <th id = "19"> </th> <th id = "1a"> </th> <th id = "1b"> </th>
               </tr>
               <tr>
                 <th><input type="radio" name="kensaku" id="city" value="524901">
@@ -121,12 +121,12 @@
                 <th id = "b9"> </th> <th id = "ba"> </th> <th id = "bb"> </th>
               </tr>
               <tr>
-                <th><input type="radio" name="kensaku" id="city" value="5368361">
-                  <label for="losangeles">ロサンゼルス</label></th>
-                <th id = "c1"> </th> <th id = "c2"> </th>
-                <th id = "c3"> </th> <th id = "c4"> </th> <th id = "c5"> </th>
-                <th id = "c6"> </th> <th id = "c7"> </th> <th id = "c8"> </th>
-                <th id = "c9"> </th> <th id = "ca"> </th> <th id = "cb"> </th>
+                <td><input type="radio" name="kensaku" id="city" value="5368361">
+                  <label for="losangeles">ロサンゼルス</label></td>
+                <td id = "c1"> </td> <td id = "c2"> </td>
+                <td id = "c3"> </td> <td id = "c4"> </td> <td id = "c5"> </td>
+                <td id = "c6"> </td> <td id = "c7"> </td> <td id = "c8"> </td>
+                <td id = "c9"> </td> <td id = "ca"> </td> <td id = "cb"> </td>
               </tr>
             </table>
           </div>
@@ -158,7 +158,7 @@
     }
 
     table {
-      width: 100%;
+      width: 80%;
       border:solid 2px #1d1f4e;
     }
 
