--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
             <table>
         
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="360630">
+                <td><input type="radio" name="kensaku" id="city1" value="360630">
                   <label for="cairo">カイロ</label></td>
                 <td id = "11"> </td> <td id = "12"> </td>
                 <td id = "13"> </td> <td id = "14"> </td> <td id = "15"> </td>
@@ -40,7 +40,7 @@
                 <td id = "19"> </td> <td id = "1a"> </td> <td id = "1b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="524901">
+                <td><input type="radio" name="kensaku" id="city2" value="524901">
                   <label for="moscow">モスクワ</label></td>
                 <td id = "21"> </td> <td id = "22"> </td>
                 <td id = "23"> </td> <td id = "24"> </td> <td id = "25"> </td>
@@ -48,7 +48,7 @@
                 <td id = "29"> </td> <td id = "2a"> </td> <td id = "2b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="993800">
+                <td><input type="radio" name="kensaku" id="city3" value="993800">
                   <label for="johannesburg">ヨハネスブルク</label></td>
                 <td id = "31"> </td> <td id = "32"> </td>
                 <td id = "33"> </td> <td id = "34"> </td> <td id = "35"> </td>
@@ -56,7 +56,7 @@
                 <td id = "39"> </td> <td id = "3a"> </td> <td id = "3b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="1816670">
+                <td><input type="radio" name="kensaku" id="city4" value="1816670">
                   <label for="beijing">北京</label></td>
                 <td id = "41"> </td> <td id = "42"> </td>
                 <td id = "43"> </td> <td id = "44"> </td> <td id = "45"> </td>
@@ -64,7 +64,7 @@
                 <td id = "49"> </td> <td id = "4a"> </td> <td id = "4b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="1850147">
+                <td><input type="radio" name="kensaku" id="city5" value="1850147">
                   <label for="tokyo">東京</label></td>
                 <td id = "51"> </td> <td id = "52"> </td>
                 <td id = "53"> </td> <td id = "54"> </td> <td id = "55"> </td>
@@ -72,7 +72,7 @@
                 <td id = "59"> </td> <td id = "5a"> </td> <td id = "5b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="1880252">
+                <td><input type="radio" name="kensaku" id="city6" value="1880252">
                   <label for="singapore">シンガポール</label></td>
                 <td id = "61"> </td> <td id = "62"> </td>
                 <td id = "63"> </td> <td id = "64"> </td> <td id = "65"> </td>
@@ -80,7 +80,7 @@
                 <td id = "69"> </td> <td id = "6a"> </td> <td id = "6b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="2147714">
+                <td><input type="radio" name="kensaku" id="city7" value="2147714">
                   <label for="sydney">シドニー</label></td>
                 <td id = "71"> </td> <td id = "72"> </td>
                 <td id = "73"> </td> <td id = "74"> </td> <td id = "75"> </td>
@@ -88,7 +88,7 @@
                 <td id = "79"> </td> <td id = "7a"> </td> <td id = "7b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="2643743">
+                <td><input type="radio" name="kensaku" id="city8" value="2643743">
                   <label for="london">ロンドン</label></td>
                 <td id = "81"> </td> <td id = "82"> </td>
                 <td id = "83"> </td> <td id = "84"> </td> <td id = "85"> </td>
@@ -96,7 +96,7 @@
                 <td id = "89"> </td> <td id = "8a"> </td> <td id = "8b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="2968815">
+                <td><input type="radio" name="kensaku" id="city9" value="2968815">
                   <label for="paris">パリ</label></td>
                 <td id = "91"> </td> <td id = "92"> </td>
                 <td id = "93"> </td> <td id = "94"> </td> <td id = "95"> </td>
@@ -104,7 +104,7 @@
                 <td id = "99"> </td> <td id = "9a"> </td> <td id = "9b"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="3451189">
+                <td><input type="radio" name="kensaku" id="citya" value="3451189">
                   <label for="riodejaneiro">リオデジャネイロ</label></td>
                 <td id = "a1"> </td> <td id = "a2"> </td>
                 <td id = "a3"> </td> <td id = "a4"> </td> <td id = "a5"> </td>
@@ -112,7 +112,7 @@
                 <td id = "a9"> </td> <td id = "aa"> </td> <td id = "ab"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="5128581">
+                <td><input type="radio" name="kensaku" id="cityb" value="5128581">
                   <label for="newyork">ニューヨーク</label></td>
                 <td id = "b1"> </td> <td id = "b2"> </td>
                 <td id = "b3"> </td> <td id = "b4"> </td> <td id = "b5"> </td>
@@ -120,7 +120,7 @@
                 <td id = "b9"> </td> <td id = "ba"> </td> <td id = "bb"> </td>
               </tr>
               <tr>
-                <td><input type="radio" name="kensaku" id="city" value="5368361">
+                <td><input type="radio" name="kensaku" id="cityc" value="5368361">
                   <label for="losangeles">ロサンゼルス</label></td>
                 <td id = "c1"> </td> <td id = "c2"> </td>
                 <td id = "c3"> </td> <td id = "c4"> </td> <td id = "c5"> </td>
