--- a/test.html
+++ b/test.html
@@ -55,13 +55,16 @@
         <div>
           <div>
             <table>
+              <tr>
+                <td>都市名</td><td>緯度</td> <td>経度</td>
+                <td>天気</td> <td>最低気温</td> <td>最高気温</td>
+                <td>湿度</td> <td>風速</td> <td>風向</td>
+              </tr>
         
               <tr>
-                <td id = "name"></td>
-                <td id = "11"> </td> <td id = "12"> </td>
+                <td id = "name"></td><td id = "11"> </td> <td id = "12"> </td>
                 <td id = "13"> </td> <td id = "14"> </td> <td id = "15"> </td>
                 <td id = "16"> </td> <td id = "17"> </td> <td id = "18"> </td>
-                <td id = "19"> </td> <td id = "1a"> </td>
               </tr>
 
             </table>
