--- a/test.html
+++ b/test.html
@@ -62,7 +62,7 @@
               </tr>
         
               <tr>
-                <td id = "name"></td><td id = "11"></td> <td id = "12"></td>
+                <td id = "name"></td><td id = "lon"></td> <td id = "12"></td>
                 <td id = "13"></td> <td id = "14"></td> <td id = "15"></td>
                 <td id = "16"></td> <td id = "17"></td> <td id = "18"></td>
               </tr>
